@@ -22,6 +22,9 @@ Bug Fixes
   declaration.
 - z<Enter>, z-, and z. now move the cursor to the start of the line.
 - Visual mode is now exited after issuing the = or gq command.
+- The commands c% and d% where not removing the closing match as expected.
+- The d{motion} command now becomes linewise when the motion covers more than
+  one line and the is just whitespace before the start and after the end.
 
 0.3.0 to 0.3.1
 
